[CCAP-1296] Update GccMultiProviderFlowJourneyTest